--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -10,15 +10,36 @@
   </div>
 
   <div class="product-details">
-    <h1>Henna</h1>
-    <p class="product-description">A perfect balance of exhilarating high-fidelity effortless magic of
-      Color.</p>
+    <h2>Henna Powder</h2>
+    <h1 style="font-size: 14px;">Mehandi Powder | 500 Grams</h1>
+
+    <p class="product-description">Kalagura Gampa Henna Powder|Mehandi Powder| comes in a 500 grams pack of 100% natural
+      and pure form of Henna Leaves only. This Henna powder gives the much needed care for hair, gives natural brown/red
+      color. All this without Chemicals, PPD, and Parabens.
+    </p>
+
+    <p>
+      Benefits of Henna:
+    </p>
+    <ul>
+      <li>
+        Henna powder is a Natural product
+
+      </li>
+      <li>
+        It acts as a conditioner
+
+      </li>
+      <li>
+        Gives natural colour dark red/brown
+      </li>
+    </ul>
     <div class="product-rating">
       <span>⭐⭐⭐⭐⭐</span>
-      <span>(121)</span>
+      <span>(10)</span>
     </div>
     <div class="product-price">
-      <span>549.00</span>
+      <span>330.00</span>
     </div>
     <!-- <p class="financing">Suggested payments with 6 months special financing</p> -->
 
@@ -39,9 +60,9 @@
       <button class="add-to-cart-btn" (click)="addToCart()">Add to Cart</button>
     </div>
 
-    <div class="delivery-info">
+    <!-- <div class="delivery-info">
       <p>Free Delivery <span>Enter your Postal code for Delivery Availability</span></p>
       <p>Return Delivery <span>Free 30days Delivery Returns. <a href="#">Details</a></span></p>
-    </div>
+    </div> -->
   </div>
 </div>
