--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -31,7 +31,7 @@
 
 <!-- Header -->
 <header class="app-header">
-  <div class="logo">
+  <div class="logo" (click)="goToHomePage()">
     <img src="../../../../assets/images/logo.png" alt="Kalaguragampa Logo" />
     <span class="brand-text">Kalagura Gampa</span>
   </div>
@@ -60,10 +60,12 @@
     <div class="action-item">
       <img src="../../../../assets/images/Wishlist.png" width="20" height="20" />
       <span>Wishlist</span>
+      <div class="badge" *ngIf="wishlistCount() > 0">{{ wishlistCount() }}</div>
     </div>
-    <div class="action-item">
+    <div class="action-item" (click)="goToCartPage()">
       <img src="../../../../assets/images/cart-48.png" width="20" height="20" />
       <span>Cart</span>
+      <div class="badge" *ngIf="cartlistCount() > 0">{{ cartlistCount() }}</div>
     </div>
   </div>
 
