--- a/src/app/features/cart/_components/cart-details/cart-details.component.scss
+++ b/src/app/features/cart/_components/cart-details/cart-details.component.scss
@@ -120,9 +120,10 @@
   .checkout-summary {
     flex: 1;
     padding: 15px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
     h2 {
       margin-bottom: 15px;
