--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -78,17 +78,17 @@
     <div class="footer-right">
       <div class="social-links">
         <span>Follow us on</span>
-        <a href="https://facebook.com" target="_blank" class="social-icon">
-          <img src="../../../../assets/images/facebook-48.png" />
+        <a class="social-icon" href="https://www.facebook.com/Kalaguragampa.Sreedevi" target="_blank" rel="noopener noreferrer">
+          <img src="../../../../assets/images/facebook-48.png" alt="Facebook" />
         </a>
-        <a href="https://youtube.com" target="_blank" class="social-icon">
-          <img src="../../../../assets/images/youtube-48.png" />
+        <a class="social-icon" href="https://www.youtube.com/c/KalaguraGampa" target="_blank" rel="noopener noreferrer">
+          <img src="../../../../assets/images/youtube-48.png" alt="YouTube" />
         </a>
-        <a href="https://twitter.com" target="_blank" class="social-icon">
-          <img src="../../../../assets/images/x-48.png" />
+        <a class="social-icon" href="https://x.com/i/flow/login?redirect_after_login=%2FKalagura_gampa" target="_blank" rel="noopener noreferrer">
+          <img src="../../../../assets/images/x-48.png" alt="Twitter" />
         </a>
-        <a href="https://instagram.com" target="_blank" class="social-icon">
-          <img src="../../../../assets/images/instagram-48.png" />
+        <a class="social-icon" href="https://www.instagram.com/kalagura_gampa/" target="_blank" rel="noopener noreferrer">
+          <img src="../../../../assets/images/instagram-48.png" alt="Instagram" />
         </a>
       </div>
     </div>
