--- a/src/app/features/checkout/_components/order-summary/order-summary.component.html
+++ b/src/app/features/checkout/_components/order-summary/order-summary.component.html
@@ -1,4 +1,4 @@
-<div class="order-summary">
+<!-- <div class="order-summary">
   <h3>Your Order</h3>
   <div class="order-item">
     <p>{{ orderDetails.productName }} - {{ orderDetails.color }}</p>
@@ -11,4 +11,34 @@
     <p><strong>Grand total: ${{ orderDetails.grandTotal }}</strong></p>
   </div>
   <button class="continue-payment" (click)="goToPaymentPage()">Continue to payment</button>
+</div> -->
+
+
+<div class="checkout-summary">
+  <h2>Price Details</h2>
+  <hr />
+
+  <div class="summary-item">
+    <p>Price (1 item):</p>
+    <p>{{ 330 | currency:'INR' }}</p>
+  </div>
+  <div class="summary-item">
+    <p>Discount:</p>
+    <!-- <p>-{{ 12000 | currency:'INR' }}</p> -->
+  </div>
+  <div class="summary-item">
+    <p>Total GST:</p>
+    <!-- <p>-{{ 100 | currency:'INR' }}</p> -->
+  </div>
+  <div class="summary-item">
+    <p>Delivery Charges:</p>
+    <!-- <p>Free</p> -->
+  </div>
+  <hr />
+  <div class="total-amount">
+    <p>Total Amount:</p>
+    <p>{{ 330 | currency:'INR' }}</p>
+  </div>
+  <p class="savings-text">You will save ₹ on this order</p>
+  <!-- <button class="checkout-btn" (click)="goToCheckoutPage()">Place Order</button> -->
 </div>
