--- a/src/app/features/checkout/_components/order-summary/order-summary.component.scss
+++ b/src/app/features/checkout/_components/order-summary/order-summary.component.scss
@@ -1,34 +1,67 @@
-.order-summary {
+.checkout-summary {
+  flex: 1;
+  padding: 15px;
   background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-h3 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
+  h2 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #333;
+  }
 
-.order-item, .order-totals {
-  margin-bottom: 10px;
-}
+  .summary-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 
-.order-item p, .order-totals p {
-  font-size: 14px;
-}
+    p {
+      margin: 0;
+      font-size: 14px;
+      color: #555;
+    }
+  }
 
-.continue-payment {
-  background-color: #00b300;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
-  font-size: 16px;
-  cursor: pointer;
-}
+  .total-amount {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
-.continue-payment:hover {
-  background-color: #007300;
+  .savings-text {
+    color: #4caf50;
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+  .checkout-btn {
+    width: 100%;
+    padding: 10px 15px;
+    background-color: transparent;
+    /* No background color */
+    color: #000;
+    /* Black text color */
+    border: 1px solid #000;
+    /* Black border */
+    border-radius: 10px;
+    font-size: 13px;
+    cursor: pointer;
+    text-transform: uppercase;
+    /* Optional: Make text uppercase for better readability */
+    // font-weight: bold;
+    /* Optional: Add weight for emphasis */
+
+    &:hover {
+      background-color: #000;
+      /* Black background on hover */
+      color: #fff;
+      /* White text on hover */
+      transition: all 0.3s ease;
+      /* Smooth hover transition */
+    }
+  }
+
 }
