--- a/src/app/shared/components/refund-policy/refund-policy.component.html
+++ b/src/app/shared/components/refund-policy/refund-policy.component.html
@@ -1,4 +1,4 @@
-<p>refund-policy works!</p>
+<!-- <p>refund-policy works!</p> -->
 <div class="refund-policy-container">
   <h1 class="title">Refund Policy</h1>
 
