--- a/src/app/shared/components/refund-policy/refund-policy.component.html
+++ b/src/app/shared/components/refund-policy/refund-policy.component.html
@@ -1,9 +1,66 @@
 <!-- <p>refund-policy works!</p> -->
 <div class="refund-policy-container">
-  <h1 class="title">Refund Policy</h1>
+  <h1>Refund Policy</h1>
+  <h2>Cancellation Policy</h2>
+  <p>
+    Kalaguragampa believes in helping its customers with the comfort of choosing
+    products for shipment and being flexible enough to change the same as far
+    as possible. Therefore, a liberal cancellation policy is provided. Under
+    this policy:
+  </p>
 
-  <div class="section" *ngFor="let section of policySections" [@fadeIn]>
-    <h2 class="section-title">{{ section.title }}</h2>
-    <p class="section-content">{{ section.content }}</p>
-  </div>
+  <ul>
+    <li>
+      Cancellations will be considered only if the request is made within 12
+      hours of placing an order. However, the cancellation request will not be
+      entertained if the orders have been communicated to the vendors/merchants
+      and they have initiated the process of shipping them.
+    </li>
+    <li>
+      There is no cancellation of orders placed under the Same Day Delivery
+      category.
+    </li>
+    <li>
+      No cancellations are entertained for those products that the Kalaguragampa
+      marketing team has obtained on special occasions like all religious
+      festivals and special days. These are limited occasion offers and
+      therefore cancellations are not possible.
+    </li>
+    <li>
+      In case of receipt of damaged or defective consumer durable items and
+      non-durable items, please report the same to our Customer Service team.
+      The request will, however, be entertained once the merchant has checked
+      and determined the same at their end. This should be reported within 1
+      day of receipt of the products.
+    </li>
+    <li>
+      In case you feel that the product received is not as shown on the site or
+      as per your expectations, you must bring it to the notice of our customer
+      service within 24 hours of receiving the product. The Customer Service
+      Team, after looking into your complaint, will take an appropriate
+      decision.
+    </li>
+  </ul>
+
+  <h2>Refund Policy</h2>
+  <ul>
+    <li>
+      Orders delivered and accepted by the customer cannot be refunded. In case
+      you feel the order is not as per specification, please contact our
+      customer care team immediately within 12 hours. If the mismatch is
+      accepted by Kalagura Gampa, the refund will be initiated, which will take
+      7-15 business days to process.
+    </li>
+    <li>
+      Kalagura Gampa is responsible only after the payment is received or
+      captured. Sometimes errors might occur at the payment gateway. Any
+      payment issues and their failures are NOT in Kalagura Gampa's scope. The
+      payment gateway companies usually process the refund within 7-15 days.
+    </li>
+    <li>
+      Once the refund is initiated from Kalagura Gampa or the Payment gateway,
+      the receipt is in the customer Bank/UPI/Credit Card purview. We do not
+      have any visibility of the status at the bank end.
+    </li>
+  </ul>
 </div>
