--- a/src/app/shared/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/shared/components/privacy-policy/privacy-policy.component.html
@@ -1,1 +1,119 @@
-<!-- <p>privacy-policy works!</p> -->
+<div class="privacy-policy-container">
+  <h1>Privacy Policy</h1>
+  <p>
+    This privacy policy sets out how Kalagura Gampa uses and protects any
+    information that you give during the registration and placing the order on
+    our website.
+  </p>
+
+  <p>
+    Kalagura Gampa is committed to ensuring that your privacy is protected.
+    Should we ask you to provide certain information by which you can be
+    identified when using this website, then you can be assured that it will
+    only be used in accordance with this privacy statement.
+  </p>
+
+  <p>
+    Kalagura Gampa may change this policy from time to time by updating this
+    page. You should check this page from time to time to ensure that you are
+    happy with any changes. This policy is effective from 9th Nov 2020.
+  </p>
+
+  <h2>What we collect</h2>
+  <p>We may collect the following information:</p>
+  <ul>
+    <li>Name and address</li>
+    <li>Contact information such as mobile number and email address</li>
+    <li>Demographic information such as postcode, preferences, and interests</li>
+    <li>Other information relevant to customer surveys and/or offers</li>
+  </ul>
+
+  <h2>What we do with the information we gather</h2>
+  <p>We require this information to:</p>
+  <ul>
+    <li>Understand your needs and provide you with a better service</li>
+    <li>
+      Internal record keeping to pack your order with purchased items in count
+      and weight
+    </li>
+    <li>Send the ordered package to reach you</li>
+    <li>
+      Send you tracking information about the ordered package until delivery
+    </li>
+    <li>
+      Improve our products, services, and offerings based on survey and buying
+      preferences
+    </li>
+    <li>
+      Periodically send promotional emails about new products, special offers,
+      or other relevant information
+    </li>
+    <li>Contact you for market research purposes</li>
+  </ul>
+
+  <h2>Security</h2>
+  <p>
+    We are committed to ensuring that your information is secure. In order to
+    prevent unauthorized access or disclosure, we have put in place suitable
+    physical, electronic, and managerial procedures to safeguard and secure the
+    information we collect online.
+  </p>
+
+  <p>
+    We are committed not to share your information in any form to any third parties for commercial interest.
+  </p>
+
+  <h2>How we use cookies</h2>
+  <p>
+    A cookie is a small file which asks permission to be placed on your
+    computer’s hard drive. Once you agree, the file is added and the cookie
+    helps analyze web traffic or lets you know when you visit a particular
+    site.
+  </p>
+  <p>
+    We use traffic log cookies to identify which pages are being used. This helps us analyze data about webpage traffic
+    and improve our website in order to tailor it to customer needs. We only use this information for statistical
+    analysis purposes and then the data is removed from the system.
+  </p>
+  <p>
+    Overall, cookies help us provide you with a better website browsing
+    experience. You can choose to accept or decline cookies. Most web browsers
+    automatically accept cookies, but you can modify your browser settings to
+    decline cookies if you prefer. However, this may prevent you from taking
+    full advantage of the website.
+  </p>
+  <p>
+    You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually
+    modify your browser setting to decline cookies if you prefer. This may prevent you from taking full advantage of the
+    website.
+  </p>
+
+  <h2>Links to other websites</h2>
+  <p>
+    Our website may contain links to other websites of interest. However, once
+    you leave our site, we are not responsible for the protection and privacy
+    of any information you provide whilst visiting such sites.
+  </p>
+
+  <h2>Controlling your personal information</h2>
+  <p>
+    You may choose to restrict the collection or use of your personal
+    information in the following ways:
+  </p>
+  <ul>
+    <li>
+      Look for the box to indicate that your information should not be used for
+      direct marketing purposes.
+    </li>
+    <li>
+      If you previously agreed to direct marketing, you may change your mind at
+      any time by emailing us at
+      <a href="mailto:support@kalaguragampa.com">{{email}}</a>.
+    </li>
+  </ul>
+  <p>
+    If you believe any information we hold about you is incorrect or
+    incomplete, please email us as soon as possible. We will promptly correct
+    any information within 72 hours of notification.
+  </p>
+</div>
