--- a/src/app/shared/components/shipment-policy/shipment-policy.component.scss
+++ b/src/app/shared/components/shipment-policy/shipment-policy.component.scss
@@ -1,62 +1,66 @@
-@import '../../../../styles/_variables.scss';
-
-
 .shipping-policy-container {
-  max-width: 1200px;
-  margin: 0 auto;
   padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Nunito', sans-serif;
+  line-height: 1.8;
 
-  .title {
-    font-size: 2rem;
+  h1 {
+    font-size: 28px;
+    color: #1a1a1a;
+    margin-bottom: 20px;
     font-weight: bold;
-    color: $primary-color;
-    text-align: center;
-    margin-bottom: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
   }
 
-  .section {
-    background-color: $light-gray;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    opacity: 0;
+  h2 {
+    font-size: 22px;
+    color: #333;
+    margin: 20px 0 15px;
+    font-weight: bold;
+    text-transform: capitalize;
+  }
 
-    .section-title {
-      font-size: 1.5rem;
-      color: $secondary-color;
+  p {
+    font-size: 16px;
+    color: #555;
+    margin: 10px 0;
+    line-height: 1.8;
+  }
+
+  ul {
+    margin: 10px 0;
+    padding-left: 0;
+
+    li {
+      font-size: 16px;
+      color: #555;
       margin-bottom: 10px;
-      font-weight: bold;
-      transition: color 0.3s;
+      list-style: none;
+      padding-left: 20px;
+      position: relative;
 
-      &:hover {
-        color: $primary-color;
+      &::before {
+        content: '•';
+        color: #682f12;
+        font-size: 18px;
+        position: absolute;
+        left: 0;
+        top: 0;
       }
     }
+  }
 
-    .section-content {
-      font-size: 1rem;
-      color: #555;
-      line-height: 1.6;
+  a {
+    color: #682f12;
+    text-decoration: underline;
+    font-weight: bold;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: #844026;
     }
-  }
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .shipping-policy-container {
-    padding: 15px;
-  }
-
-  .title {
-    font-size: 1.5rem;
-  }
-
-  .section-title {
-    font-size: 1.2rem;
-  }
-
-  .section-content {
-    font-size: 0.9rem;
   }
 }
