--- a/src/app/shared/components/refund-policy/refund-policy.component.scss
+++ b/src/app/shared/components/refund-policy/refund-policy.component.scss
@@ -43,8 +43,8 @@
       position: relative;
 
       &::before {
-        content: '•'; /* Add custom bullet */
-        color: #682f12; /* Theme color for bullet */
+        // content: '•'; /* Add custom bullet */
+        // color: #682f12; /* Theme color for bullet */
         font-size: 18px;
         position: absolute;
         left: 0;
