--- a/src/app/shared/components/shipment-policy/shipment-policy.component.scss
+++ b/src/app/shared/components/shipment-policy/shipment-policy.component.scss
@@ -43,8 +43,8 @@
       position: relative;
 
       &::before {
-        content: '•';
-        color: #682f12;
+        // content: '•';
+        // color: #682f12;
         font-size: 18px;
         position: absolute;
         left: 0;
