--- a/src/app/shared/components/terms/terms.component.html
+++ b/src/app/shared/components/terms/terms.component.html
@@ -1,1 +1,137 @@
-<p>terms works!</p>
+<div class="terms-service-container">
+  <h1>Terms of Service</h1>
+
+  <p>
+    This privacy policy sets out how Kalagura Gampa uses and protects any information that you give during the
+    registration and placing the order on our website.
+  </p>
+
+  <p>
+    Kalaguragampa is committed to ensuring that your privacy is protected. Should we ask you to provide certain
+    information by which you can be identified when using this website, then you can be assured that it will only be
+    used in accordance with this privacy statement.
+  </p>
+
+  <p>
+    Kalaguragampa may change this policy from time to time by updating this page. You should check this page from time
+    to time to ensure that you are happy with any changes. This policy is effective from 9th Nov 2020.
+  </p>
+
+  <h2>What we collect</h2>
+  <ul>
+    <li>Name and address</li>
+    <li>Contact information such as mobile number and email address</li>
+    <li>Demographic information such as postcode, preferences, and interests</li>
+    <li>Other information relevant to customer surveys and/or offers</li>
+  </ul>
+
+  <h2>What we do with the information we gather</h2>
+  <p>We require this information to understand your needs and provide you with a better service, and in particular for
+    the following reasons:</p>
+  <ul>
+    <li>Internal record keeping. This helps us to pack your order with purchased items in count and weight.</li>
+    <li>We use your contact details to send the ordered package to reach you.</li>
+    <li>
+      We use your contact details to send you the tracking information and the movement of the ordered package until it
+      is delivered. It happens through automated mail communications and SMS to your mobile number.
+    </li>
+    <li>
+      We may use the survey information as well as the buying preferences to improve our products and services as well
+      as improve our service offerings.
+    </li>
+    <li>
+      We may periodically send promotional emails about new products, special offers, or other information which we
+      think you may find interesting using the email address you have provided. You may choose to opt-out of these
+      promotional mails anytime you wish by clicking on the unsubscribe button.
+    </li>
+    <li>
+      From time to time, we may also use your information to contact you for market research purposes. We may contact
+      you by email, phone, fax, or mail. We may use the information to customize the website according to your
+      interests.
+    </li>
+  </ul>
+
+  <h2>Security</h2>
+  <p>
+    We are committed to ensuring that your information is secure. In order to prevent unauthorized access or disclosure,
+    we have put in place suitable physical, electronic, and managerial procedures to safeguard and secure the
+    information we collect online.
+  </p>
+
+  <p>We are committed not to share your information in any form with any third parties for commercial interest.</p>
+
+  <h2>How we use cookies</h2>
+  <p>
+    A cookie is a small file which asks permission to be placed on your computer’s hard drive. Once you agree, the file
+    is added and the cookie helps analyze web traffic or lets you know when you visit a particular site. Cookies allow
+    web applications to respond to you as an individual. The web application can tailor its operations to your needs,
+    likes, and dislikes by gathering and remembering information about your preferences. This improves the efficiency of
+    the website while you are browsing it.
+  </p>
+  <p>
+    We use traffic log cookies to identify which pages are being used. This helps us analyze data about webpage traffic
+    and improve our website in order to tailor it to customer needs. We only use this information for statistical
+    analysis purposes and then the data is removed from the system.
+  </p>
+  <p>
+    Overall, cookies help us provide you with a better website browsing experience, by enabling us to monitor which
+    pages you find useful and which you do not. A cookie in no way gives us access to your computer or any information
+    about you, other than the data you choose to share with us.
+  </p>
+  <p>
+    You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually
+    modify your browser setting to decline cookies if you prefer. This may prevent you from taking full advantage of the
+    website.
+  </p>
+
+  <h2>Links to other websites</h2>
+  <p>
+    Our website may contain links to other websites of interest. However, once you have used these links to leave our
+    site, you should note that we do not have any control over that other website. Therefore, we are not responsible for
+    the protection and privacy of any information which you provide whilst visiting such sites and such sites are not
+    governed by this privacy statement. You should exercise caution and look at the privacy statement applicable to the
+    website in question.
+  </p>
+
+  <h2>Controlling your personal information</h2>
+  <ul>
+    <li>
+      Whenever you are asked to fill in a form on the website, look for the box that you can click to indicate that you
+      do not want the information to be used by anybody for direct marketing purposes.
+    </li>
+    <li>
+      If you have previously agreed to us using your personal information for direct marketing purposes, you may change
+      your mind at any time by writing to or emailing us at <a href="mailto:support@kalaguragampa.com">{{ email }}</a>.
+    </li>
+    <li>
+      We will not sell, distribute or lease your personal information to third parties unless we have your permission or
+      are required by law to do so. We may use your personal information to send you promotional information about third
+      parties which we think you may find interesting if you tell us that you wish this to happen.
+    </li>
+    <li>
+      You may request details of personal information which we hold about you under the Data Protection Act 1998. A
+      small fee will be payable. If you would like a copy of the information held on you please write to {{email}}
+    </li>
+    <li>
+      If you believe that any information we are holding on you is incorrect or incomplete, please write to or email us
+      as soon as possible, at the above address. We will promptly correct any information found to be incorrect within
+      72 hours of notification.
+    </li>
+  </ul>
+
+  <h2>Governing Law and Jurisdiction</h2>
+  <p>
+    The Terms of Use and the Policies shall be construed in accordance with the applicable laws of India. For
+    proceedings arising therein the Courts at Hyderabad & District KV Rangareddy, Telangana shall have exclusive
+    jurisdiction. Any dispute or difference either in interpretation or otherwise, of the Terms of Use and other
+    Policies on the Site, between the parties hereto, shall be referred to an independent arbitrator who will be
+    appointed by both the parties. And his decision shall be final and binding on the parties hereto. The above
+    arbitration shall be in accordance with the Arbitration and Conciliation Act, 1996 as amended from time to time. The
+    seat and venue of arbitration shall be held in Hyderabad. Without any prejudice to particulars listed in Clause 10
+    above, the Company shall have the right to seek and obtain any injunctive, provisional, or interim relief from any
+    court of competent jurisdiction to protect its trademark or other intellectual property rights or confidential
+    information or to preserve the status quo pending arbitration. For disputes relating to orders outside India, the
+    International arbitration rules of the Indian Arbitration and Conciliation Act 1996 shall apply. The seat and venue
+    of international arbitration shall be Hyderabad.
+  </p>
+</div>
