--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -66,3 +66,16 @@
     </div> -->
   </div>
 </div>
+
+<!-- <div class="similar-products">
+  <div class="header">
+    <h3>Similar Products</h3>
+  </div>
+  <div class="horizontal-scroll-container">
+    <div class="scrollable-content">
+      <div *ngFor="let item of items" class="product-item">
+        <app-product></app-product>
+      </div>
+    </div>
+  </div>
+</div> -->
