--- a/src/app/features/product/_components/product-list/product-list.component.scss
+++ b/src/app/features/product/_components/product-list/product-list.component.scss
@@ -9,7 +9,7 @@
       font-size: 24px;
       font-weight: bold;
       color: #333;
-      text-align: center;
+      text-align: start;
     }
   }
 
