--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -106,6 +106,16 @@
         </span>
       </div>
 
+      <div class="form-group remember-me">
+        <input
+          type="checkbox"
+          id="rememberMe"
+          formControlName="rememberMe"
+        />
+        <label for="rememberMe">Remember Me</label>
+      </div>
+
+
       <p class="forgot-password">
         <a href="#" (click)="onForgotPassword()">Forgot Password?</a>
       </p>
