--- a/src/app/features/auth/_components/login/login.component.scss
+++ b/src/app/features/auth/_components/login/login.component.scss
@@ -154,3 +154,21 @@
   }
 }
 
+.remember-me {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+
+  input[type="checkbox"] {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+  }
+
+  label {
+    font-size: 14px;
+    color: #555;
+  }
+}
+
