--- a/src/app/features/product/_components/view-product/view-product.component.html
+++ b/src/app/features/product/_components/view-product/view-product.component.html
@@ -57,7 +57,7 @@
 
     <div class="product-actions">
       <button class="buy-now-btn" (click)="goToCheckoutPage()">Buy Now</button>
-      <button class="add-to-cart-btn" (click)="addToCart()">Add to Cart</button>
+      <button class="buy-now-btn" (click)="addToCart()">Add to Cart</button>
     </div>
 
     <!-- <div class="delivery-info">
