--- a/src/app/features/product/_components/product-list/product-list.component.html
+++ b/src/app/features/product/_components/product-list/product-list.component.html
@@ -52,4 +52,22 @@
     <app-product></app-product>
 
   </div>
+
+  <div class="shop-by-category">
+    <div class="header">
+      <h3>Blogs</h3>
+    </div>
+
+    <!-- <div class="products">
+      <div *ngFor="let product of popularProducts" class="product-item">
+        <img [src]="product.imageUrl" [alt]="product.name" />
+        <p class="product-name">{{ product.name }}</p>
+        <p class="product-price">{{ product.price | currency: 'INR' }}</p>
+        <button (click)="addToCart(product)">Add to Cart</button>
+      </div>
+    </div> -->
+
+    <!-- <app-product></app-product> -->
+
+  </div>
 </section>
