--- a/src/app/features/auth/_components/login/login.component.scss
+++ b/src/app/features/auth/_components/login/login.component.scss
@@ -68,10 +68,38 @@
       }
 
       .info-text {
-        font-size: 0.8rem;
-        color: #666;
-        margin-top: 5px;
+        .send-otp-link {
+          position: relative;
+          display: inline-flex;
+          align-items: center;
+          cursor: pointer;
+
+          &.disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+          }
+
+          .loader {
+            margin-left: 8px;
+            border: 2px solid transparent;
+            border-top: 2px solid #ff9800; /* Loader color */
+            border-radius: 50%;
+            width: 12px;
+            height: 12px;
+            animation: spin 0.8s linear infinite;
+          }
+
+          @keyframes spin {
+            from {
+              transform: rotate(0deg);
+            }
+            to {
+              transform: rotate(360deg);
+            }
+          }
+        }
       }
+
     }
 
     .btn-signin {
