--- a/src/app/features/auth/_components/login/login.component.scss
+++ b/src/app/features/auth/_components/login/login.component.scss
@@ -79,24 +79,7 @@
             opacity: 0.6;
           }
 
-          .loader {
-            margin-left: 8px;
-            border: 2px solid transparent;
-            border-top: 2px solid #ff9800; /* Loader color */
-            border-radius: 50%;
-            width: 12px;
-            height: 12px;
-            animation: spin 0.8s linear infinite;
-          }
 
-          @keyframes spin {
-            from {
-              transform: rotate(0deg);
-            }
-            to {
-              transform: rotate(360deg);
-            }
-          }
         }
       }
 
@@ -119,22 +102,6 @@
       &:disabled {
         background-color: #ccc;
         cursor: not-allowed;
-      }
-    }
-
-    .register-text {
-      margin-top: 20px;
-      text-align: center;
-      font-size: 0.9rem;
-
-      a {
-        color: #682f12;
-        text-decoration: underline;
-        cursor: pointer;
-
-        &:hover {
-          color: #844026;
-        }
       }
     }
   }
@@ -197,6 +164,53 @@
   label {
     font-size: 14px;
     color: #555;
+  }
+}
+
+.register-text {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.register-link {
+  color: #682f12; /* Theme color */
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+    color: #844026; /* Slightly darker shade on hover */
+  }
+}
+
+.loader {
+  margin-left: 8px;
+  border: 2px solid transparent;
+  border-top: 2px solid #ff9800; /* Loader color */
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 0.8s linear infinite;
+}
+
+.signIn-loader {
+  margin-left: 8px;
+  border: 2px solid transparent;
+  border-top: 2px solid #fff; /* Loader color */
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
