--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -10,34 +10,18 @@
     <p class="subtitle">Welcome</p>
 
     <!-- Login with OTP Form -->
-    <form
-      *ngIf="activeLoginMethod === 'otp'"
-      [formGroup]="loginOtpForm"
-      (ngSubmit)="onSubmitOtp()"
-    >
+    <form *ngIf="activeLoginMethod === 'otp'" [formGroup]="loginOtpForm" (ngSubmit)="onSubmitOtp()">
       <div class="form-group">
         <label for="mobileNumber">Mobile Number</label>
-        <input
-          type="text"
-          id="mobileNumber"
-          class="form-control"
-          placeholder="Enter your mobile number"
-          formControlName="mobileNumber"
-          (input)="onMobileNumberInput()"
-        />
-        <span
-          class="validation-message"
-          *ngIf="loginOtpForm.get('mobileNumber')?.invalid && loginOtpForm.get('mobileNumber')?.touched"
-        >
+        <input type="text" id="mobileNumber" class="form-control" placeholder="Enter your mobile number"
+          formControlName="mobileNumber" (input)="onMobileNumberInput()" />
+        <span class="validation-message"
+          *ngIf="loginOtpForm.get('mobileNumber')?.invalid && loginOtpForm.get('mobileNumber')?.touched">
           Valid mobile number is required.
         </span>
         <p class="info-text">
-          <a
-            class="send-otp-link"
-            [class.disabled]="!isMobileValid || isLoading"
-            (click)="sendOtp($event)"
-            [attr.aria-disabled]="!isMobileValid || isLoading"
-          >
+          <a class="send-otp-link" [class.disabled]="!isMobileValid || isLoading" (click)="sendOtp($event)"
+            [attr.aria-disabled]="!isMobileValid || isLoading">
             <span *ngIf="!isLoading">Send OTP</span>
             <span *ngIf="isLoading" class="loader"></span>
           </a>
@@ -47,73 +31,47 @@
 
       <div class="form-group" *ngIf="isOtpSent">
         <label for="otp">OTP</label>
-        <input
-          type="text"
-          id="otp"
-          class="form-control"
-          placeholder="Enter OTP"
-          formControlName="otp"
-          maxlength="5"
-        />
-        <span
-          class="validation-message"
-          *ngIf="loginOtpForm.get('otp')?.invalid && loginOtpForm.get('otp')?.touched"
-        >
+        <input type="text" id="otp" class="form-control" placeholder="Enter OTP" formControlName="otp" maxlength="5" />
+        <span class="validation-message" *ngIf="loginOtpForm.get('otp')?.invalid && loginOtpForm.get('otp')?.touched">
           OTP must be 5 characters long.
         </span>
       </div>
 
       <button type="submit" class="btn-signin" [disabled]="loginOtpForm.invalid">
-        Sign In
+        <span *ngIf="!isSignInLoading">Sign In</span>
+        <span *ngIf="isSignInLoading" class="signIn-loader"></span>
       </button>
+
+      <!-- Register Link -->
+      <p class="register-text">
+        Don't have an account? <a (click)="onRegister()" class="register-link">Register</a>
+      </p>
     </form>
 
     <!-- Login with Password Form -->
-    <form
-      *ngIf="activeLoginMethod === 'password'"
-      [formGroup]="loginPasswordForm"
-      (ngSubmit)="onSubmitPassword()"
-    >
+    <form *ngIf="activeLoginMethod === 'password'" [formGroup]="loginPasswordForm" (ngSubmit)="onSubmitPassword()">
       <div class="form-group">
         <label for="emailOrMobile">Email or Mobile Number</label>
-        <input
-          type="text"
-          id="emailOrMobile"
-          class="form-control"
-          placeholder="Enter your email or mobile number"
-          formControlName="emailOrMobile"
-        />
-        <span
-          class="validation-message"
-          *ngIf="loginPasswordForm.get('emailOrMobile')?.invalid && loginPasswordForm.get('emailOrMobile')?.touched"
-        >
+        <input type="text" id="emailOrMobile" class="form-control" placeholder="Enter your email or mobile number"
+          formControlName="emailOrMobile" />
+        <span class="validation-message"
+          *ngIf="loginPasswordForm.get('emailOrMobile')?.invalid && loginPasswordForm.get('emailOrMobile')?.touched">
           Email or Mobile Number is required.
         </span>
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          class="form-control"
-          placeholder="Enter your password"
-          formControlName="password"
-        />
-        <span
-          class="validation-message"
-          *ngIf="loginPasswordForm.get('password')?.invalid && loginPasswordForm.get('password')?.touched"
-        >
+        <input type="password" id="password" class="form-control" placeholder="Enter your password"
+          formControlName="password" />
+        <span class="validation-message"
+          *ngIf="loginPasswordForm.get('password')?.invalid && loginPasswordForm.get('password')?.touched">
           Password is required.
         </span>
       </div>
 
       <div class="form-group remember-me">
-        <input
-          type="checkbox"
-          id="rememberMe"
-          formControlName="rememberMe"
-        />
+        <input type="checkbox" id="rememberMe" formControlName="rememberMe" />
         <label for="rememberMe">Remember Me</label>
       </div>
 
@@ -125,6 +83,11 @@
       <button type="submit" class="btn-signin" [disabled]="loginPasswordForm.invalid">
         Sign In
       </button>
+
+      <!-- Register Link -->
+      <p class="register-text">
+        Don't have an account? <a (click)="onRegister()" class="register-link">Register</a>
+      </p>
     </form>
   </div>
 </div>
